src/runtime/snapshots/ghat__runtime__tests__module_multi_file_with_imports.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/_helpers.ts ===
export function rustSteps(): object[] {
    return [
        { run: "rustup show" },
        { run: "cargo test" },
    ];
}
=== /workflows/ci.ts ===
import { rustSteps } from "./_helpers.ts";

__define_workflow("CI", {
    name: "CI",
    on: { push: { branches: ["main"] } },
    jobs: {
        test: {
            name: "test",
            "runs-on": "ubuntu-latest",
            steps: rustSteps()
        }
    }
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: test
    runs-on: ubuntu-latest
    steps:
    - run: rustup show
    - run: cargo test
