src/runtime/snapshots/ghat__runtime__tests__module_multiple_workflows_one_file.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/multi.js ===
__define_workflow("Build", {
    name: "Build",
    on: { push: { branches: ["main"] } },
    jobs: {
        build: {
            name: "build",
            "runs-on": "ubuntu-latest",
            steps: [{ run: "cargo build" }]
        }
    }
});

__define_workflow("Test", {
    name: "Test",
    on: { push: { branches: ["main"] } },
    jobs: {
        test: {
            name: "test",
            "runs-on": "ubuntu-latest",
            steps: [{ run: "cargo test" }]
        }
    }
});
=== output ===
# build
name: Build
on:
  push:
    branches:
    - main
jobs:
  build:
    name: build
    runs-on: ubuntu-latest
    steps:
    - run: cargo build
# test
name: Test
on:
  push:
    branches:
    - main
jobs:
  test:
    name: test
    runs-on: ubuntu-latest
    steps:
    - run: cargo test
