src/runtime/snapshots/ghat__runtime__tests__module_single_js_workflow.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.js ===
__define_workflow("CI", {
    name: "CI",
    on: { push: { branches: ["main"] } },
    jobs: {
        build: {
            name: "build",
            "runs-on": "ubuntu-latest",
            steps: [{ run: "cargo build" }]
        }
    }
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: build
    runs-on: ubuntu-latest
    steps:
    - run: cargo build
